<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/rd_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/restaurant_placeholder"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/line">

            <TableRow
                android:layout_marginBottom="1dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="@dimen/table_padding_top">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/address"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/rd_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textColor="#000"
                        android:scrollHorizontally="true"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>



            <TableRow
                android:layout_marginBottom="1dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/table_height"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/table_padding_top">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/cuisines"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/rd_cuisines"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:textColor="#000"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="@android:color/white"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/table_height"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/table_padding_top">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/average_cost_for_two"
                        android:textColor="@color/colorPrimaryDark"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/rd_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="25dp"
                            android:text="$"
                            android:textColor="#000"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_marginBottom="1dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/table_height"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/table_padding_top">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/rating"
                        android:textColor="@color/colorPrimaryDark"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/rd_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="46dp"
                            android:layout_height="25dp"
                            android:text=" / 5.0"
                            android:textColor="#000"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_marginBottom="1dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/table_height"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/table_padding_top">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/review"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/rd_review"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:textColor="#000"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_marginBottom="1dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/table_padding_top">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="Website"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/rd_site"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textColor="#0000ee"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>


        </TableLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>